--- a/Lab1/src/main/resources/templates/user-info.html
+++ b/Lab1/src/main/resources/templates/user-info.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>User Info Fragment</title>
+    <title>User Info</title>
 </head>
 <body>
 <!-- User Information Fragment (Bài 2 & 3) -->
